--- a/WcfExample.Services/WcfExample.Services.csproj
+++ b/WcfExample.Services/WcfExample.Services.csproj
@@ -6,9 +6,14 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\WcfExample.Contracts\WcfExample.Contracts.csproj" />
+    <ProjectReference Include="..\WcfExample.ServerBase\WcfExample.ServerBase.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.ServiceModel" />
   </ItemGroup>
 </Project>
